// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/supplier/SupplierFleets Snapshots Default 1`] = `
<div
  class="container"
>
  <div
    class="v-card v-sheet theme--light"
  >
    <div
      align-center=""
      class="v-card__title"
      justify-space-between=""
    >
      <span
        class="grey--text"
      >
        My fleets
      </span>
       
      <div
        class="spacer"
      />
       
      <button
        class="v-btn v-btn--round theme--light primary"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          
      View All
    
        </div>
      </button>
    </div>
     
    <hr
      class="v-divider theme--light"
    />
     
    <div
      class="layout px-4 py-2 row"
    />
     
    <hr
      class="v-divider theme--light"
    />
     
    <div
      class="v-card__text"
    >
      <div
        class="layout row wrap"
      >
        <div
          class="flex xs12"
        >
          <div>
            <div
              class="ui-datatable"
            >
              <div
                class="v-table__overflow"
              >
                <table
                  class="v-datatable v-table v-datatable--select-all theme--light"
                >
                  <thead>
                    <tr>
                      <th>
                        <div
                          class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                        >
                          <div
                            class="v-input__control"
                          >
                            <div
                              class="v-input__slot"
                            >
                              <div
                                class="v-input--selection-controls__input"
                              >
                                <input
                                  aria-checked="false"
                                  role="checkbox"
                                  type="checkbox"
                                  value=""
                                />
                                <div
                                  class="v-input--selection-controls__ripple"
                                />
                                <i
                                  aria-hidden="true"
                                  class="v-icon material-icons theme--light"
                                >
                                  check_box_outline_blank
                                </i>
                              </div>
                            </div>
                          </div>
                        </div>
                      </th>
                      <th
                        aria-label="Status: Not sorted. Activate to sort ascending."
                        aria-sort="none"
                        class="column sortable text-xs-left"
                        role="columnheader"
                        scope="col"
                        tabindex="0"
                      >
                        <span>
                          
        Status
      
                        </span>
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                          style="font-size: 16px;"
                        >
                          arrow_upward
                        </i>
                      </th>
                      <th
                        aria-label="Name / Category: Not sorted. Activate to sort ascending."
                        aria-sort="none"
                        class="column sortable text-xs-left"
                        role="columnheader"
                        scope="col"
                        tabindex="0"
                      >
                        <span>
                          
        Name / Category
      
                        </span>
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                          style="font-size: 16px;"
                        >
                          arrow_upward
                        </i>
                      </th>
                      <th
                        aria-label="Hometown: Not sorted. Activate to sort ascending."
                        aria-sort="none"
                        class="column sortable text-xs-left"
                        role="columnheader"
                        scope="col"
                        tabindex="0"
                      >
                        <span>
                          
        Hometown
      
                        </span>
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                          style="font-size: 16px;"
                        >
                          arrow_upward
                        </i>
                      </th>
                      <th
                        aria-label="Manage: Not sorted."
                        aria-sort="none"
                        class="column text-xs-center"
                        role="columnheader"
                        scope="col"
                      >
                        <span>
                          
        Manage
      
                        </span>
                      </th>
                    </tr>
                    <tr
                      class="v-datatable__progress"
                    >
                      <th
                        class="column"
                        colspan="5"
                      />
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td
                        class="text-xs-center"
                        colspan="5"
                      >
                        No matching records found
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
             
            <div
              class="layout align-center"
            >
              <div
                class="flex grow justify-center"
              >
                <div
                  class="layout justify-center"
                >
                  <ul
                    class="v-pagination theme--light"
                  >
                    <li>
                      <button
                        class="v-pagination__navigation v-pagination__navigation--disabled"
                        type="button"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                        >
                          chevron_left
                        </i>
                      </button>
                    </li>
                    <li>
                      <button
                        class="v-pagination__item v-pagination__item--active primary"
                        type="button"
                      >
                        1
                      </button>
                    </li>
                    <li>
                      <button
                        class="v-pagination__navigation v-pagination__navigation--disabled"
                        type="button"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                        >
                          chevron_right
                        </i>
                      </button>
                    </li>
                  </ul>
                </div>
              </div>
               
              <div
                class="flex shrink"
              >
                <div
                  class="v-input v-text-field v-select v-input--is-label-active v-input--is-dirty theme--light"
                  role="combobox"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                    >
                      <div
                        class="v-select__slot"
                      >
                        <label
                          aria-hidden="true"
                          class="v-label v-label--active theme--light"
                          style="left: 0px; position: absolute;"
                        >
                          Results Per Page
                        </label>
                        <div
                          class="v-select__selections"
                        >
                          <div
                            class="v-select__selection v-select__selection--comma"
                          >
                            10
                          </div>
                          <input
                            aria-label="Results Per Page"
                            aria-readonly="false"
                            autocomplete="on"
                            readonly="readonly"
                            type="text"
                          />
                        </div>
                        <div
                          class="v-input__append-inner"
                        >
                          <div
                            class="v-input__icon v-input__icon--append"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon material-icons theme--light"
                            >
                              arrow_drop_down
                            </i>
                          </div>
                        </div>
                      </div>
                      <div
                        class="v-menu"
                      >
                        <div
                          class="v-menu__content theme--light "
                          style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                        >
                          <div
                            class="v-select-list v-card theme--light"
                          >
                            <div
                              class="v-list theme--light"
                              role="list"
                            >
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__content"
                                  >
                                    <div
                                      class="v-list__tile__title"
                                    >
                                      5
                                    </div>
                                  </div>
                                </a>
                              </div>
                              <div
                                class="primary--text"
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
                                >
                                  <div
                                    class="v-list__tile__content"
                                  >
                                    <div
                                      class="v-list__tile__title"
                                    >
                                      10
                                    </div>
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__content"
                                  >
                                    <div
                                      class="v-list__tile__title"
                                    >
                                      15
                                    </div>
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__content"
                                  >
                                    <div
                                      class="v-list__tile__title"
                                    >
                                      25
                                    </div>
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__content"
                                  >
                                    <div
                                      class="v-list__tile__title"
                                    >
                                      30
                                    </div>
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__content"
                                  >
                                    <div
                                      class="v-list__tile__title"
                                    >
                                      50
                                    </div>
                                  </div>
                                </a>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="v-text-field__details"
                    >
                      <div
                        class="v-messages theme--light"
                      >
                        <div
                          class="v-messages__wrapper"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/supplier/SupplierFleets Snapshots Loading 1`] = `
<div
  class="container"
>
  <div
    class="v-card v-sheet theme--light"
  >
    <div
      align-center=""
      class="v-card__title"
      justify-space-between=""
    >
      <span
        class="grey--text"
      >
        My fleets
      </span>
       
      <div
        class="spacer"
      />
       
      <button
        class="v-btn v-btn--round theme--light primary"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          
      View All
    
        </div>
      </button>
    </div>
     
    <hr
      class="v-divider theme--light"
    />
     
    <div
      class="layout px-4 py-2 row"
    />
     
    <hr
      class="v-divider theme--light"
    />
     
    <div
      class="v-card__text"
    >
      <div
        class="layout row wrap"
      >
        <div
          class="flex xs12"
        >
          <div>
            <div
              class="ui-datatable"
            >
              <div
                class="v-table__overflow"
              >
                <table
                  class="v-datatable v-table v-datatable--select-all theme--light"
                >
                  <thead>
                    <tr>
                      <th>
                        <div
                          class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                        >
                          <div
                            class="v-input__control"
                          >
                            <div
                              class="v-input__slot"
                            >
                              <div
                                class="v-input--selection-controls__input"
                              >
                                <input
                                  aria-checked="false"
                                  role="checkbox"
                                  type="checkbox"
                                  value=""
                                />
                                <div
                                  class="v-input--selection-controls__ripple"
                                />
                                <i
                                  aria-hidden="true"
                                  class="v-icon material-icons theme--light"
                                >
                                  check_box_outline_blank
                                </i>
                              </div>
                            </div>
                          </div>
                        </div>
                      </th>
                      <th
                        aria-label="Status: Not sorted. Activate to sort ascending."
                        aria-sort="none"
                        class="column sortable text-xs-left"
                        role="columnheader"
                        scope="col"
                        tabindex="0"
                      >
                        <span>
                          
        Status
      
                        </span>
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                          style="font-size: 16px;"
                        >
                          arrow_upward
                        </i>
                      </th>
                      <th
                        aria-label="Name / Category: Not sorted. Activate to sort ascending."
                        aria-sort="none"
                        class="column sortable text-xs-left"
                        role="columnheader"
                        scope="col"
                        tabindex="0"
                      >
                        <span>
                          
        Name / Category
      
                        </span>
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                          style="font-size: 16px;"
                        >
                          arrow_upward
                        </i>
                      </th>
                      <th
                        aria-label="Hometown: Not sorted. Activate to sort ascending."
                        aria-sort="none"
                        class="column sortable text-xs-left"
                        role="columnheader"
                        scope="col"
                        tabindex="0"
                      >
                        <span>
                          
        Hometown
      
                        </span>
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                          style="font-size: 16px;"
                        >
                          arrow_upward
                        </i>
                      </th>
                      <th
                        aria-label="Manage: Not sorted."
                        aria-sort="none"
                        class="column text-xs-center"
                        role="columnheader"
                        scope="col"
                      >
                        <span>
                          
        Manage
      
                        </span>
                      </th>
                    </tr>
                    <tr
                      class="v-datatable__progress"
                    >
                      <th
                        class="column"
                        colspan="5"
                      >
                        <div
                          aria-valuemax="100"
                          aria-valuemin="0"
                          class="v-progress-linear"
                          role="progressbar"
                          style="height: 10px;"
                        >
                          <div
                            class="v-progress-linear__background primary"
                            style="height: 10px; opacity: 0.3; width: 100%;"
                          />
                          <div
                            class="v-progress-linear__bar"
                          >
                            <div
                              class="v-progress-linear__bar__indeterminate v-progress-linear__bar__indeterminate--active"
                            >
                              <div
                                class="v-progress-linear__bar__indeterminate long primary"
                              />
                              <div
                                class="v-progress-linear__bar__indeterminate short primary"
                              />
                            </div>
                            <!---->
                          </div>
                        </div>
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td
                        class="text-xs-center"
                        colspan="5"
                      >
                        No matching records found
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
             
            <div
              class="layout align-center"
            >
              <div
                class="flex grow justify-center"
              >
                <div
                  class="layout justify-center"
                >
                  <ul
                    class="v-pagination v-pagination--disabled theme--light"
                  >
                    <li>
                      <button
                        class="v-pagination__navigation v-pagination__navigation--disabled"
                        type="button"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                        >
                          chevron_left
                        </i>
                      </button>
                    </li>
                    <li>
                      <button
                        class="v-pagination__item v-pagination__item--active primary"
                        type="button"
                      >
                        1
                      </button>
                    </li>
                    <li>
                      <button
                        class="v-pagination__navigation v-pagination__navigation--disabled"
                        type="button"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                        >
                          chevron_right
                        </i>
                      </button>
                    </li>
                  </ul>
                </div>
              </div>
               
              <div
                class="flex shrink"
              >
                <div
                  class="v-input v-text-field v-select v-input--is-label-active v-input--is-dirty theme--light"
                  role="combobox"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                    >
                      <div
                        class="v-select__slot"
                      >
                        <label
                          aria-hidden="true"
                          class="v-label v-label--active theme--light"
                          style="left: 0px; position: absolute;"
                        >
                          Results Per Page
                        </label>
                        <div
                          class="v-select__selections"
                        >
                          <div
                            class="v-select__selection v-select__selection--comma"
                          >
                            10
                          </div>
                          <input
                            aria-label="Results Per Page"
                            aria-readonly="false"
                            autocomplete="on"
                            readonly="readonly"
                            type="text"
                          />
                        </div>
                        <div
                          class="v-input__append-inner"
                        >
                          <div
                            class="v-input__icon v-input__icon--append"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon material-icons theme--light"
                            >
                              arrow_drop_down
                            </i>
                          </div>
                        </div>
                      </div>
                      <div
                        class="v-menu"
                      >
                        <div
                          class="v-menu__content theme--light "
                          style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                        >
                          <div
                            class="v-select-list v-card theme--light"
                          >
                            <div
                              class="v-list theme--light"
                              role="list"
                            >
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__content"
                                  >
                                    <div
                                      class="v-list__tile__title"
                                    >
                                      5
                                    </div>
                                  </div>
                                </a>
                              </div>
                              <div
                                class="primary--text"
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
                                >
                                  <div
                                    class="v-list__tile__content"
                                  >
                                    <div
                                      class="v-list__tile__title"
                                    >
                                      10
                                    </div>
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__content"
                                  >
                                    <div
                                      class="v-list__tile__title"
                                    >
                                      15
                                    </div>
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__content"
                                  >
                                    <div
                                      class="v-list__tile__title"
                                    >
                                      25
                                    </div>
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__content"
                                  >
                                    <div
                                      class="v-list__tile__title"
                                    >
                                      30
                                    </div>
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__content"
                                  >
                                    <div
                                      class="v-list__tile__title"
                                    >
                                      50
                                    </div>
                                  </div>
                                </a>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="v-text-field__details"
                    >
                      <div
                        class="v-messages theme--light"
                      >
                        <div
                          class="v-messages__wrapper"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/supplier/SupplierFleets Snapshots Populated 1`] = `
<div
  class="container"
>
  <div
    class="v-card v-sheet theme--light"
  >
    <div
      align-center=""
      class="v-card__title"
      justify-space-between=""
    >
      <span
        class="grey--text"
      >
        My fleets
      </span>
       
      <div
        class="spacer"
      />
       
      <button
        class="v-btn v-btn--round theme--light primary"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          
      View All
    
        </div>
      </button>
    </div>
     
    <hr
      class="v-divider theme--light"
    />
     
    <div
      class="layout px-4 py-2 row"
    >
      <div
        class="flex xs12 sm6 md3"
      >
        <div
          class="layout pa-4 column justify-center align-center"
        >
          <div
            class="flex display-3 primary--text"
          >
            
    42
  
          </div>
           
          <div
            class="flex grey--text text-uppercase font-weight-bold"
          >
            
    Active
  
          </div>
        </div>
      </div>
      <div
        class="flex xs12 sm6 md3"
      >
        <div
          class="layout pa-4 column justify-center align-center"
        >
          <div
            class="flex display-3 warning--text"
          >
            
    24
  
          </div>
           
          <div
            class="flex grey--text text-uppercase font-weight-bold"
          >
            
    Pending
  
          </div>
        </div>
      </div>
      <div
        class="flex xs12 sm6 md3"
      >
        <div
          class="layout pa-4 column justify-center align-center"
        >
          <div
            class="flex display-3 error--text"
          >
            
    12
  
          </div>
           
          <div
            class="flex grey--text text-uppercase font-weight-bold"
          >
            
    Expiring Soon
  
          </div>
        </div>
      </div>
      <div
        class="flex xs12 sm6 md3"
      >
        <div
          class="layout pa-4 column justify-center align-center"
        >
          <div
            class="flex display-3 grey--text"
          >
            
    4
  
          </div>
           
          <div
            class="flex grey--text text-uppercase font-weight-bold"
          >
            
    On hold
  
          </div>
        </div>
      </div>
    </div>
     
    <hr
      class="v-divider theme--light"
    />
     
    <div
      class="v-card__text"
    >
      <div
        class="layout row wrap"
      >
        <div
          class="flex xs12"
        >
          <div>
            <div
              class="ui-datatable"
            >
              <div
                class="v-table__overflow"
              >
                <table
                  class="v-datatable v-table v-datatable--select-all theme--light"
                >
                  <thead>
                    <tr>
                      <th>
                        <div
                          class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                        >
                          <div
                            class="v-input__control"
                          >
                            <div
                              class="v-input__slot"
                            >
                              <div
                                class="v-input--selection-controls__input"
                              >
                                <input
                                  aria-checked="false"
                                  role="checkbox"
                                  type="checkbox"
                                  value=""
                                />
                                <div
                                  class="v-input--selection-controls__ripple"
                                />
                                <i
                                  aria-hidden="true"
                                  class="v-icon material-icons theme--light"
                                >
                                  check_box_outline_blank
                                </i>
                              </div>
                            </div>
                          </div>
                        </div>
                      </th>
                      <th
                        aria-label="Status: Not sorted. Activate to sort ascending."
                        aria-sort="none"
                        class="column sortable text-xs-left"
                        role="columnheader"
                        scope="col"
                        tabindex="0"
                      >
                        <span>
                          
        Status
      
                        </span>
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                          style="font-size: 16px;"
                        >
                          arrow_upward
                        </i>
                      </th>
                      <th
                        aria-label="Name / Category: Not sorted. Activate to sort ascending."
                        aria-sort="none"
                        class="column sortable text-xs-left"
                        role="columnheader"
                        scope="col"
                        tabindex="0"
                      >
                        <span>
                          
        Name / Category
      
                        </span>
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                          style="font-size: 16px;"
                        >
                          arrow_upward
                        </i>
                      </th>
                      <th
                        aria-label="Hometown: Not sorted. Activate to sort ascending."
                        aria-sort="none"
                        class="column sortable text-xs-left"
                        role="columnheader"
                        scope="col"
                        tabindex="0"
                      >
                        <span>
                          
        Hometown
      
                        </span>
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                          style="font-size: 16px;"
                        >
                          arrow_upward
                        </i>
                      </th>
                      <th
                        aria-label="Manage: Not sorted."
                        aria-sort="none"
                        class="column text-xs-center"
                        role="columnheader"
                        scope="col"
                      >
                        <span>
                          
        Manage
      
                        </span>
                      </th>
                    </tr>
                    <tr
                      class="v-datatable__progress"
                    >
                      <th
                        class="column"
                        colspan="5"
                      />
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td>
                        <div
                          class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                          primary=""
                        >
                          <div
                            class="v-input__control"
                          >
                            <div
                              class="v-input__slot"
                            >
                              <div
                                class="v-input--selection-controls__input"
                              >
                                <input
                                  aria-checked="false"
                                  primary=""
                                  role="checkbox"
                                  type="checkbox"
                                  value=""
                                />
                                <div
                                  class="v-input--selection-controls__ripple"
                                />
                                <i
                                  aria-hidden="true"
                                  class="v-icon material-icons theme--light"
                                >
                                  check_box_outline_blank
                                </i>
                              </div>
                            </div>
                          </div>
                        </div>
                      </td>
                       
                      <td
                        class="text-xs-left"
                      >
                        <button
                          class="v-btn theme--dark accent accent-text--text"
                          type="button"
                        >
                          <div
                            class="v-btn__content"
                          >
                            
  Draft
 
                            <i
                              aria-hidden="true"
                              class="v-icon v-icon--right material-icons theme--dark"
                            >
                              arrow_drop_down
                            </i>
                          </div>
                        </button>
                        <div
                          class="v-menu"
                        >
                          <div
                            class="v-menu__content theme--light "
                            style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                          >
                             
                            <div
                              class="v-list theme--light"
                              role="list"
                            >
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    Draft
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    Pending
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    Revision
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    Rejected
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    Approved
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    On Hold
                                  </div>
                                </a>
                              </div>
                            </div>
                          </div>
                        </div>
                      </td>
                      <td
                        class="text-xs-left"
                      >
                        <a
                          class="font-weight-bold text-not-underline"
                          href="#view-item"
                        >
                          Da Lobster
                        </a>
                         
                        <br />
                        
            Mobile
          
                      </td>
                      <td
                        class="text-xs-left"
                      >
                        
              California
            
                      </td>
                      <td
                        class="justify-center text-xs-center"
                      >
                        <button
                          class="v-btn theme--dark primary primary-text--text"
                          type="button"
                        >
                          <div
                            class="v-btn__content"
                          >
                            
                Manage
               
                            <i
                              aria-hidden="true"
                              class="v-icon v-icon--right material-icons theme--dark"
                            >
                              arrow_drop_down
                            </i>
                          </div>
                        </button>
                        <div
                          class="v-menu"
                        >
                          <div
                            class="v-menu__content theme--light "
                            style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                          >
                             
                            <div
                              class="v-list theme--light"
                              role="list"
                            >
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    View / Edit
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    Delete
                                  </div>
                                </a>
                              </div>
                            </div>
                          </div>
                        </div>
                      </td>
                    </tr>
                    <tr>
                      <td>
                        <div
                          class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                          primary=""
                        >
                          <div
                            class="v-input__control"
                          >
                            <div
                              class="v-input__slot"
                            >
                              <div
                                class="v-input--selection-controls__input"
                              >
                                <input
                                  aria-checked="false"
                                  primary=""
                                  role="checkbox"
                                  type="checkbox"
                                  value=""
                                />
                                <div
                                  class="v-input--selection-controls__ripple"
                                />
                                <i
                                  aria-hidden="true"
                                  class="v-icon material-icons theme--light"
                                >
                                  check_box_outline_blank
                                </i>
                              </div>
                            </div>
                          </div>
                        </div>
                      </td>
                       
                      <td
                        class="text-xs-left"
                      >
                        <button
                          class="v-btn theme--dark warning warning-text--text"
                          type="button"
                        >
                          <div
                            class="v-btn__content"
                          >
                            
  Pending
 
                            <i
                              aria-hidden="true"
                              class="v-icon v-icon--right material-icons theme--dark"
                            >
                              arrow_drop_down
                            </i>
                          </div>
                        </button>
                        <div
                          class="v-menu"
                        >
                          <div
                            class="v-menu__content theme--light "
                            style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                          >
                             
                            <div
                              class="v-list theme--light"
                              role="list"
                            >
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    Draft
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    Pending
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    Revision
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    Rejected
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    Approved
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    On Hold
                                  </div>
                                </a>
                              </div>
                            </div>
                          </div>
                        </div>
                      </td>
                      <td
                        class="text-xs-left"
                      >
                        <a
                          class="font-weight-bold text-not-underline"
                          href="#view-item"
                        >
                          Rekindler
                        </a>
                         
                        <br />
                        
            Stationery
          
                      </td>
                      <td
                        class="text-xs-left"
                      >
                        
              New York
            
                      </td>
                      <td
                        class="justify-center text-xs-center"
                      >
                        <button
                          class="v-btn theme--dark primary primary-text--text"
                          type="button"
                        >
                          <div
                            class="v-btn__content"
                          >
                            
                Manage
               
                            <i
                              aria-hidden="true"
                              class="v-icon v-icon--right material-icons theme--dark"
                            >
                              arrow_drop_down
                            </i>
                          </div>
                        </button>
                        <div
                          class="v-menu"
                        >
                          <div
                            class="v-menu__content theme--light "
                            style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                          >
                             
                            <div
                              class="v-list theme--light"
                              role="list"
                            >
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    View / Edit
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    Delete
                                  </div>
                                </a>
                              </div>
                            </div>
                          </div>
                        </div>
                      </td>
                    </tr>
                    <tr>
                      <td>
                        <div
                          class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                          primary=""
                        >
                          <div
                            class="v-input__control"
                          >
                            <div
                              class="v-input__slot"
                            >
                              <div
                                class="v-input--selection-controls__input"
                              >
                                <input
                                  aria-checked="false"
                                  primary=""
                                  role="checkbox"
                                  type="checkbox"
                                  value=""
                                />
                                <div
                                  class="v-input--selection-controls__ripple"
                                />
                                <i
                                  aria-hidden="true"
                                  class="v-icon material-icons theme--light"
                                >
                                  check_box_outline_blank
                                </i>
                              </div>
                            </div>
                          </div>
                        </div>
                      </td>
                       
                      <td
                        class="text-xs-left"
                      >
                        <button
                          class="v-btn theme--dark warning warning-text--text"
                          type="button"
                        >
                          <div
                            class="v-btn__content"
                          >
                            
  Pending
 
                            <i
                              aria-hidden="true"
                              class="v-icon v-icon--right material-icons theme--dark"
                            >
                              arrow_drop_down
                            </i>
                          </div>
                        </button>
                        <div
                          class="v-menu"
                        >
                          <div
                            class="v-menu__content theme--light "
                            style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                          >
                             
                            <div
                              class="v-list theme--light"
                              role="list"
                            >
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    Draft
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    Pending
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    Revision
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    Rejected
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    Approved
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    On Hold
                                  </div>
                                </a>
                              </div>
                            </div>
                          </div>
                        </div>
                      </td>
                      <td
                        class="text-xs-left"
                      >
                        <a
                          class="font-weight-bold text-not-underline"
                          href="#view-item"
                        >
                          Fiora
                        </a>
                         
                        <br />
                        
            Stationery
          
                      </td>
                      <td
                        class="text-xs-left"
                      >
                        
              California
            
                      </td>
                      <td
                        class="justify-center text-xs-center"
                      >
                        <button
                          class="v-btn theme--dark primary primary-text--text"
                          type="button"
                        >
                          <div
                            class="v-btn__content"
                          >
                            
                Manage
               
                            <i
                              aria-hidden="true"
                              class="v-icon v-icon--right material-icons theme--dark"
                            >
                              arrow_drop_down
                            </i>
                          </div>
                        </button>
                        <div
                          class="v-menu"
                        >
                          <div
                            class="v-menu__content theme--light "
                            style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                          >
                             
                            <div
                              class="v-list theme--light"
                              role="list"
                            >
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    View / Edit
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    Delete
                                  </div>
                                </a>
                              </div>
                            </div>
                          </div>
                        </div>
                      </td>
                    </tr>
                    <tr>
                      <td>
                        <div
                          class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                          primary=""
                        >
                          <div
                            class="v-input__control"
                          >
                            <div
                              class="v-input__slot"
                            >
                              <div
                                class="v-input--selection-controls__input"
                              >
                                <input
                                  aria-checked="false"
                                  primary=""
                                  role="checkbox"
                                  type="checkbox"
                                  value=""
                                />
                                <div
                                  class="v-input--selection-controls__ripple"
                                />
                                <i
                                  aria-hidden="true"
                                  class="v-icon material-icons theme--light"
                                >
                                  check_box_outline_blank
                                </i>
                              </div>
                            </div>
                          </div>
                        </div>
                      </td>
                       
                      <td
                        class="text-xs-left"
                      >
                        <button
                          class="v-btn theme--dark success success-text--text"
                          type="button"
                        >
                          <div
                            class="v-btn__content"
                          >
                            
  Revision
 
                            <i
                              aria-hidden="true"
                              class="v-icon v-icon--right material-icons theme--dark"
                            >
                              arrow_drop_down
                            </i>
                          </div>
                        </button>
                        <div
                          class="v-menu"
                        >
                          <div
                            class="v-menu__content theme--light "
                            style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                          >
                             
                            <div
                              class="v-list theme--light"
                              role="list"
                            >
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    Draft
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    Pending
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    Revision
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    Rejected
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    Approved
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    On Hold
                                  </div>
                                </a>
                              </div>
                            </div>
                          </div>
                        </div>
                      </td>
                      <td
                        class="text-xs-left"
                      >
                        <a
                          class="font-weight-bold text-not-underline"
                          href="#view-item"
                        >
                          Trundle
                        </a>
                         
                        <br />
                        
            Stationery
          
                      </td>
                      <td
                        class="text-xs-left"
                      >
                        
              California
            
                      </td>
                      <td
                        class="justify-center text-xs-center"
                      >
                        <button
                          class="v-btn theme--dark primary primary-text--text"
                          type="button"
                        >
                          <div
                            class="v-btn__content"
                          >
                            
                Manage
               
                            <i
                              aria-hidden="true"
                              class="v-icon v-icon--right material-icons theme--dark"
                            >
                              arrow_drop_down
                            </i>
                          </div>
                        </button>
                        <div
                          class="v-menu"
                        >
                          <div
                            class="v-menu__content theme--light "
                            style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                          >
                             
                            <div
                              class="v-list theme--light"
                              role="list"
                            >
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    View / Edit
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    Delete
                                  </div>
                                </a>
                              </div>
                            </div>
                          </div>
                        </div>
                      </td>
                    </tr>
                    <tr>
                      <td>
                        <div
                          class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                          primary=""
                        >
                          <div
                            class="v-input__control"
                          >
                            <div
                              class="v-input__slot"
                            >
                              <div
                                class="v-input--selection-controls__input"
                              >
                                <input
                                  aria-checked="false"
                                  primary=""
                                  role="checkbox"
                                  type="checkbox"
                                  value=""
                                />
                                <div
                                  class="v-input--selection-controls__ripple"
                                />
                                <i
                                  aria-hidden="true"
                                  class="v-icon material-icons theme--light"
                                >
                                  check_box_outline_blank
                                </i>
                              </div>
                            </div>
                          </div>
                        </div>
                      </td>
                       
                      <td
                        class="text-xs-left"
                      >
                        <button
                          class="v-btn theme--dark error error-text--text"
                          type="button"
                        >
                          <div
                            class="v-btn__content"
                          >
                            
  Rejected
 
                            <i
                              aria-hidden="true"
                              class="v-icon v-icon--right material-icons theme--dark"
                            >
                              arrow_drop_down
                            </i>
                          </div>
                        </button>
                        <div
                          class="v-menu"
                        >
                          <div
                            class="v-menu__content theme--light "
                            style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                          >
                             
                            <div
                              class="v-list theme--light"
                              role="list"
                            >
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    Draft
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    Pending
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    Revision
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    Rejected
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    Approved
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    On Hold
                                  </div>
                                </a>
                              </div>
                            </div>
                          </div>
                        </div>
                      </td>
                      <td
                        class="text-xs-left"
                      >
                        <a
                          class="font-weight-bold text-not-underline"
                          href="#view-item"
                        >
                          La fourchette
                        </a>
                         
                        <br />
                        
            Stationery
          
                      </td>
                      <td
                        class="text-xs-left"
                      >
                        
              California
            
                      </td>
                      <td
                        class="justify-center text-xs-center"
                      >
                        <button
                          class="v-btn theme--dark primary primary-text--text"
                          type="button"
                        >
                          <div
                            class="v-btn__content"
                          >
                            
                Manage
               
                            <i
                              aria-hidden="true"
                              class="v-icon v-icon--right material-icons theme--dark"
                            >
                              arrow_drop_down
                            </i>
                          </div>
                        </button>
                        <div
                          class="v-menu"
                        >
                          <div
                            class="v-menu__content theme--light "
                            style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                          >
                             
                            <div
                              class="v-list theme--light"
                              role="list"
                            >
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    View / Edit
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    Delete
                                  </div>
                                </a>
                              </div>
                            </div>
                          </div>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
             
            <div
              class="layout align-center"
            >
              <div
                class="flex grow justify-center"
              >
                <div
                  class="layout justify-center"
                >
                  <ul
                    class="v-pagination theme--light"
                  >
                    <li>
                      <button
                        class="v-pagination__navigation v-pagination__navigation--disabled"
                        type="button"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                        >
                          chevron_left
                        </i>
                      </button>
                    </li>
                    <li>
                      <button
                        class="v-pagination__item v-pagination__item--active primary"
                        type="button"
                      >
                        1
                      </button>
                    </li>
                    <li>
                      <button
                        class="v-pagination__navigation v-pagination__navigation--disabled"
                        type="button"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                        >
                          chevron_right
                        </i>
                      </button>
                    </li>
                  </ul>
                </div>
              </div>
               
              <div
                class="flex shrink"
              >
                <div
                  class="v-input v-text-field v-select v-input--is-label-active v-input--is-dirty theme--light"
                  role="combobox"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                    >
                      <div
                        class="v-select__slot"
                      >
                        <label
                          aria-hidden="true"
                          class="v-label v-label--active theme--light"
                          style="left: 0px; position: absolute;"
                        >
                          Results Per Page
                        </label>
                        <div
                          class="v-select__selections"
                        >
                          <div
                            class="v-select__selection v-select__selection--comma"
                          >
                            10
                          </div>
                          <input
                            aria-label="Results Per Page"
                            aria-readonly="false"
                            autocomplete="on"
                            readonly="readonly"
                            type="text"
                          />
                        </div>
                        <div
                          class="v-input__append-inner"
                        >
                          <div
                            class="v-input__icon v-input__icon--append"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon material-icons theme--light"
                            >
                              arrow_drop_down
                            </i>
                          </div>
                        </div>
                      </div>
                      <div
                        class="v-menu"
                      >
                        <div
                          class="v-menu__content theme--light "
                          style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                        >
                          <div
                            class="v-select-list v-card theme--light"
                          >
                            <div
                              class="v-list theme--light"
                              role="list"
                            >
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__content"
                                  >
                                    <div
                                      class="v-list__tile__title"
                                    >
                                      5
                                    </div>
                                  </div>
                                </a>
                              </div>
                              <div
                                class="primary--text"
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
                                >
                                  <div
                                    class="v-list__tile__content"
                                  >
                                    <div
                                      class="v-list__tile__title"
                                    >
                                      10
                                    </div>
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__content"
                                  >
                                    <div
                                      class="v-list__tile__title"
                                    >
                                      15
                                    </div>
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__content"
                                  >
                                    <div
                                      class="v-list__tile__title"
                                    >
                                      25
                                    </div>
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__content"
                                  >
                                    <div
                                      class="v-list__tile__title"
                                    >
                                      30
                                    </div>
                                  </div>
                                </a>
                              </div>
                              <div
                                role="listitem"
                              >
                                <a
                                  class="v-list__tile v-list__tile--link theme--light"
                                >
                                  <div
                                    class="v-list__tile__content"
                                  >
                                    <div
                                      class="v-list__tile__title"
                                    >
                                      50
                                    </div>
                                  </div>
                                </a>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="v-text-field__details"
                    >
                      <div
                        class="v-messages theme--light"
                      >
                        <div
                          class="v-messages__wrapper"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
